[package]
name = "oxsh"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@pm.me>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
oxs = { path = "../oxs/oxs" }
oxs-std = { path = "../oxs/oxs-std", optional = true }

[features]
static_std = [ "oxs-std" ]
default = [
    "static_std"
]