[package]
name = "oxlex"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxlex"
path = "src/lib.rs"

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
oxlex-derive = { path = "../oxlex-derive", optional = true }

[features]
derive = [
    "oxlex-derive"
]
default = [
    "derive"
]