[package]
name = "oxlex"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@pm.me>"]
edition = "2018"
license = "BSD-3-Clause"
homepage = "https://github.com/wrckn/oxy-script"
repository = "https://github.com/wrckn/oxy-script"
description = "Simple lexer/tokenizer used in OxyScript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxlex"
path = "src/lib.rs"

[dependencies]
regex = "1.3.4"
lazy_static = "1.4.0"
oxlex-derive = { version = "0.1.0", optional = true }

[features]
derive = [
    "oxlex-derive"
]
default = [
    "derive"
]